--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
    
 <div class="container">
+   <h1>SnakeGame</h1> 
     <canvas id="gamecontainer" class="gamecontainer" ></canvas>
      <div id="food" class="food"></div>
     <div class="snakeBodyPixal"></div>    
         <div class="scoreBoard"> 
             <h1>Your Score :  <span id="score">0 </span></h1>
+
+            play in windows <style> </style>
 
             
         </div> 
