--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="scoreBoard"> 
             <h1>Your Score :  <span id="score">0 </span></h1>
 
-            play in windows <style> </style>
+            play on windows 
 
             
         </div> 
